--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.3.14",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
